500-homeassistant/00-socat-ser2net-endpoints.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: socat-ser2net
subsets:
  - addresses:
      - ip: 192.168.0.29 #The IP Address of the external web server
    ports:
      - port: 10001
