500-homeassistant/01-socat-ser2net-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socat-ser2net
spec:
  ports:
    - protocol: TCP
      port: 10001
      targetPort: 10001
