500-homeassistant/50-homeassistant-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homeassistant
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: homeassistant.int.volfoni.org
    http:
      paths:
      - path: /
        backend:
          serviceName: homeassistant
          servicePort: 80
